[gd_scene load_steps=10 format=3 uid="uid://bex8wke86oiyy"]

[ext_resource type="Script" uid="uid://buxu1vo5dpwo" path="res://scenes/game_components/fireball.gd" id="1_ycwja"]
[ext_resource type="Texture2D" uid="uid://bl765o06duiyr" path="res://assets/sprites/fireball.png" id="2_11n6a"]
[ext_resource type="AudioStream" uid="uid://xkedy27cdyhp" path="res://assets/sounds/explosion.wav" id="3_11n6a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_11n6a"]
atlas = ExtResource("2_11n6a")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hff2b"]
atlas = ExtResource("2_11n6a")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iko3i"]
atlas = ExtResource("2_11n6a")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e63n"]
atlas = ExtResource("2_11n6a")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_woaga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11n6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hff2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iko3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e63n")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_11n6a"]
radius = 7.07107

[node name="Fireball" type="Area2D"]
position = Vector2(7, -7)
collision_layer = 32
collision_mask = 5
script = ExtResource("1_ycwja")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_woaga")
frame_progress = 0.741793

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_11n6a")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="ExplodeAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_11n6a")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
